objects/Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Acquire_Property_By__c</fullName>
        <label>Acquire Property By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Ref</label>
        <referenceTo>Property_Booking__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <label>Property Name</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_No__c</fullName>
        <displayFormat>QNo-{000}</displayFormat>
        <label>Quote No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quoted_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quoted to Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Quotation</label>
    <nameField>
        <displayFormat>Q ID-{0000}</displayFormat>
        <label>Quotation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>